<resources>
    <string name="app_name">BBS Accés</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_detalle_votacion" translatable="false">DetalleVotacionActivity</string>
    <string name="noDadesValidar">No hi han dades per validar</string>
    <string name="errorCrearAssistent">Error: no s\'ha creat l\'assistent!</string>
    <string name="errorEnviarRespostes">Error: no s\'han enviat les respostes!</string>
    <string name="usuariIncorrecte">Usuari incorrecte</string>
    <string name="errorDades">Error: no s\'han enviat les dades!</string>
    <string name="errorValidar">Error: no es pot validar</string>
    <string name="errorNom">Error: no es pot obtenir el nom</string>
    <string name="contacte">Contacte</string>
    <string name="accedirQR">Accedir mitjançant QR</string>
    <string name="inscriu">Inscriu-te</string>
    <string name="entradaNoValida">L\'entrada no pertany a aquest esdeveniment</string>
    <string name="validarAcces">Validant accès...</string>
    <string name="noApuntat">L\'assistent no s\'ha apuntat a l\'esdeveniment</string>
    <string name="jaApuntat">L\'assistent ja ha accedit a l\'esdeveniment</string>
    <string name="accedirEvent">pot accedir a l\'esdeveniment</string>
    <string name="enviantDades">Enviant dades...</string>
    <string name="finalitzar">Finalitzar</string>
    <string name="carregantDades">Carregant dades...</string>
    <string name="errorConnexio">Error de connexió</string>
    <string name="EsdNoDisp">Encara no hi ha cap esdeveniment disponible</string>
    <string name="esdeveniments">Esdeveniments</string>
    <string name="votacions">Votacions</string>
    <string name="VotaNoDisp">Encara no hi ha cap votació disponible</string>
    <string name="historics">Històrics</string>
    <string name="HisNoDisp">Encara no has accedit a cap esdeveniment</string>
    <string name="iniciantSessio">Iniciant sessió...</string>
    <string name="obtenirDades">Obtenint dades...</string>
    <string name="errorPerfil">Perfil només disponible per als colegiats</string>
    <string name="avisLegal">Avís Legal</string>
    <string name="dataHora">Data i hora:</string>
    <string name="lloc">Lloc:</string>
    <string name="inscripcioOberta">Inscripció oberta:</string>
    <string name="presencial">Presencial:</string>
    <string name="numAss">Número d\'assistents:</string>
    <string name="accedirNFC">Accedir mitjançant NFC</string>
    <string name="votaDisponibles">Votacions disponibles</string>
    <string name="moltesGracies">Moltes gràcies</string>
    <string name="registreCorrecte">s\'ha registrat correctament</string>
    <string name="validarNFC">Validar mitjançant NFC</string>
    <string name="validarQR">Validar mitjançant QR</string>
    <string name="validarManual">Validar entrada manualment</string>
    <string name="assistentCorrecte">Assistent correcte</string>
    <string name="potAccedirEsdeveniment">pot accedir a l\'esdeveniment</string>
    <string name="assistentIncorrecte">Assistent incorrecte</string>
    <string name="noPotAccedirEsdv">No pot accedir a l\'esdeveniment</string>
    <string name="respostaObligatoria">Resposta obligatòria</string>
    <string name="votar">Votar</string>
    <string name="dadesEnviadesCorrectament">les seves dades s\'han enviat correctament</string>
    <string name="esdeveniment">Esdeveniment:</string>
    <string name="fechaHoraIni">Data i hora d\'inici:</string>
    <string name="fechaHoraFin">Data i hora Fi:</string>
    <string name="votacioFeta">Votació feta:</string>
    <string name="esdevenimentsDisponibles">Esdeveniments disponibles</string>
    <string name="avis">Avís</string>
    <string name="benvinguts">Benvinguts</string>
    <string name="iniciarSessio">Iniciar sessió</string>
    <string name="usuari">Usuari</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="recordarContrasenya">Recordar contrasenya</string>
    <string name="elMeuPerfil">El meu perfil</string>
    <string name="esdevenimentsDisponibles2">Esdeveniments disponibles:</string>
    <string name="votaDisponibles2">Votacions disponibles:</string>
    <string name="esdevenimentsAccedits">Esdeveniments accedits:</string>
    <string name="votaFetes">Votacions fetes:</string>
    <string name="accedirEsdeveniment">Accedir a l\'esdeveniment</string>
    <string name="ensenyarQR">Ensenyi aquest codi al responsable de l\'esdeveniment.</string>
    <string name="validarManual2">Validar manualment</string>
    <string name="numFarmaceutic">Número de farmacèutic:</string>
    <string name="assistentEsCorrecte">L\'assistent es correcte?</string>
    <string name="nom">Nom:</string>
    <string name="correu">Correu:</string>
    <string name="correcte">Correcte</string>
    <string name="incorrecte">Incorrecte</string>
    <string name="bustiaSuggeriments">Bústia de suggeriments</string>
    <string name="canviarIdioma">Canviar idioma</string>
    <string name="tancarSessio">Tancar sessió</string>
    <string name="versio">BBS Accés v1.0</string>
    <string name="Catala" translatable="false">Català</string>
    <string name="Castellano" translatable="false">Castellano</string>
</resources>
