<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="    "
            android:id="@+id/textView5"
            android:background="#00A9A1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/benvinguts"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:background="#00b2d9"
            android:textColor="#ffffffff"
            android:textSize="18dp"
            android:textIsSelectable="false"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_login"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciarSessio"
            android:textColor="#105b7a"
            android:id="@+id/textView"
            android:textSize="17dp"
            android:background="@drawable/textview_underline"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuari"
            android:id="@+id/textView2"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/textview_border"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:editable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasenya"
            android:id="@+id/textView3"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/textview_border"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="15dp"
            android:singleLine="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordarContrasenya"
            android:textColor="#868786"
            android:id="@+id/checkBox"
            android:checked="false"
            android:button="@drawable/checkbox_selector"
            android:paddingLeft="10dp"
            android:layout_marginLeft="17dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/iniciarSessio"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="#e67e22"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:typeface="sans"/>
    </LinearLayout>

</RelativeLayout>
