<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        tools:context=".ListActivity"
        tools:showIn="@layout/activity_main">

        <!-- Resto de la interfaz de usuario -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1"
            android:id="@+id/menu"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#008ba9"
                android:paddingLeft="9dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:id="@+id/menuBtn">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iconMenu"
                    android:src="@drawable/menu"
                    />
            </FrameLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/logo"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:clickable="true" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00A9A1">

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/titol"
                android:textColor="#008ba9"
                android:background="#F6FBFC"
                android:padding="10dp"
                android:text="@string/canviarIdioma" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/titulo_final"
                android:layout_marginLeft="-5dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f4f6f4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingTop="15dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                // This is where our buttons will be

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Catala"
                    android:id="@+id/radioButton"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Castellano"
                    android:id="@+id/radioButton2"
                    android:checked="false" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/canviarIdioma"
                android:id="@+id/buttonIdioma"
                android:layout_gravity="center_horizontal"
                android:background="#e67e22"
                android:textColor="@android:color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:typeface="sans"
                android:layout_margin="15dp"
                android:clickable="true" />
        </LinearLayout>

    </LinearLayout>

    <!-- Navigation View -->
    <include layout="@layout/menu_lateral" />

</android.support.v4.widget.DrawerLayout>